# Multi-Turn-RL-Agent

./: README.md  pyproject.toml  quick_start_install.sh  requirements.txt
scripts/: ms_grpo_quickstart.sh  ms_po_dev_quickstart.sh  ms_po_quickstart.sh  run_eval.sh  run_grpo.sh  run_grpo_mr.sh  run_grpo_or.sh  run_ms_grpo.sh  run_ms_po.sh  run_mt_grpo.sh  run_mt_grpo_aae.sh  run_mt_grpo_cae.sh
verifiers/: __init__.py
verifiers/envs/: code_env.py  doublecheck_env.py  multistep_env.py  multiturn_env.py  tool_env.py
verifiers/examples/: triviaqa_search.py  triviaqa_search_cpu.py  triviaqa_search_eval.py  triviaqa_search_ms_grpo.py  triviaqa_search_ms_po.py  triviaqa_search_ms_po_dev.py
verifiers/rubrics/: triviaqa_rubric.py
verifiers/tools/: local_wiki_search.py
verifiers/trainers/: __init__.py  grpo_env_trainer.py  ms_grpo_env_trainer.py  ms_po_env_trainer.py  ms_po_env_trainer_dev.py  mt_grpo_env_trainer.py
verifiers/utils/: config_utils.py  model_utils.py
