[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verifiers"
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
authors = [
  { name = "Siliang Zeng", email = "zeng0176@umn.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools]
packages = ["verifiers"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirementx.txt"] }
